tests/js/invalid/if/zero-conditional.buri
result = if 0 do "hello"